update consumer fields, test subscribe method
